- Updated Swagger documentation
