# app/Http/Controllers/Api/AuthController.php
@@ -3,16 +3,11 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Requests\UserRequest;
-use App\Mail\RegistrationSuccessful;
 use App\Services\Mailer;
-use App\Services\Pagination\Paginator;
 use App\Services\TokenGenerator;
 use Illuminate\Http\Request;
-use App\Http\Controllers\Controller;
 use App\User;
 use Illuminate\Support\Facades\Auth;
-use Illuminate\Support\Facades\Mail;
-use Illuminate\Support\Facades\Validator;
 use Symfony\Component\HttpFoundation\Response;
 
 
@@ -174,106 +169,5 @@ class AuthController extends BaseApiController
         } else {
             return $this->errorView('bad_credentials', Response::HTTP_UNAUTHORIZED);
         }
-    }
-
-    /**
-     * @OA\Get(
-     *      path="/auth-user",
-     *      tags={"User"},
-     *      summary="Get authorized user details",
-     *      description="Returns logged user data",
-     *      @OA\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/UserItem"),
-     *       ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     *     security={
-     *         {"bearerAuth": {}}
-     *     }
-     * )
-     */
-    public function getUser()
-    {
-        return $this->view(Auth::user(),Response::HTTP_OK);
-    }
-
-
-    /**
-     * @OA\Get(
-     *      path="/users",
-     *      tags={"User"},
-     *      summary="All users",
-     *      description="Returns liss of all users",
-     *      @OA\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/UserItem"),
-     *       ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     *     security={
-     *         {"bearerAuth": {}}
-     *     }
-     * )
-     * @param Request $request
-     * @param Paginator $paginator
-     * @return \Illuminate\Http\JsonResponse
-     */
-    public function getUserList(Request $request, Paginator $paginator)
-    {
-        return $this->view($paginator->paginate(User::all()->toArray(),$request),Response::HTTP_OK);
-    }
-
-    /**
-     * @OA\Delete(
-     *      path="/user/delete/{id}",
-     *      tags={"User"},
-     *      summary="Delete user by ID",
-     *      description="Returns successful delete information",
-     *      @OA\Response(
-     *          response=200,
-     *          description="successful operation"
-     *       ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     *     security={
-     *         {"bearerAuth": {}}
-     *     }
-     * )
-     * @param User $user
-     * @return \Illuminate\Http\JsonResponse
-     * @throws \Exception
-     */
-    public function deleteUser(User $user)
-    {
-        $id = $user->id;
-        $user->delete();
-        return $this->view('User with ID ' . $id . ' was successfully deleted',Response::HTTP_OK);
-    }
-
-    /**
-     * @OA\Delete(
-     *      path="/auth-user/delete",
-     *      tags={"User"},
-     *      summary="Delete authorized user",
-     *      description="Returns successful delete information",
-     *      @OA\Response(
-     *          response=200,
-     *          description="successful operation"
-     *       ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     *     security={
-     *         {"bearerAuth": {}}
-     *     }
-     * )
-     */
-    public function deleteAuthUser()
-    {
-        $id = Auth::id();
-        Auth::user()->delete();
-        return $this->view('User with ID ' . $id . ' was successfully deleted',Response::HTTP_OK);
     }
 }
